added action update user (#10)
* added new columns to user, add action update profile
